--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -1,4 +1,4 @@
-name: cppcheck-action
+name: Static code Cppcheck
 on: [push]
 
 jobs:
@@ -11,4 +11,5 @@ jobs:
       - name: Install cppcheck
         run: sudo apt-get -y install cppcheck
       - name: Cppcheck code
-        run: cppcheck MiniProject_C/3_Implementation 
+        run: cppcheck 3_Implementation 
+
